# Apple_wallet_card

./: .gitignore  ALTERNATIVES.md  CONTRIBUTING.md  CREATE_QR_CODE.py  FIX_ALL_WALLET_ISSUES.md  FIX_WALLET.md  Makefile  NEXT_STEPS.md  OPEN_ON_IPHONE.md  PASSSOURCE_INSIGHTS.md  QUICKSTART.md  QUICK_FIX.md  README.md  RUN.md  VERCEL_DEPLOYMENT_FIX.md  app.py  generate_cert.sh  make_pass.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.py  test_direct_link.html  test_pkpass.sh  verify_pkpass.sh
.github/workflows/: ci.yml
config/: default.yaml  example.yaml
docker/: Dockerfile  docker-compose.yml
src/wallet_card/: __init__.py
src/wallet_card/cli/: __init__.py  commands.py
src/wallet_card/core/: __init__.py  asset_manager.py  pass_generator.py  pkpass_generator.py  validator.py
src/wallet_card/templates/: __init__.py  base_template.py  bold_red.py  business_card.py  classic_blue.py  elegant_purple.py  minimalist_light.py  modern_dark.py  professional_green.py
src/wallet_card/utils/: __init__.py  config_loader.py  file_utils.py
src/wallet_card/web/: __init__.py  app.py
src/wallet_card/web/templates/: index.html
tests/: __init__.py  conftest.py  test_asset_manager.py  test_pass_generator.py  test_validator.py
